styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    background:
        linear-gradient(rgb(113, 193, 231), transparent),
        linear-gradient(to top left, rgb(3, 51, 127), transparent),
        linear-gradient(to top right, rgb(48, 52, 54), transparent);
    background-blend-mode: screen;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

h1 {
    text-shadow: 2px 2px;
    color: rgb(50, 86, 124);
}

.container {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
    align-items: flex-end;
    background-color: #134269;
    border: 2px solid rgb(164, 167, 190);
    border-radius: 3.5%;
    height: 450px;
    width:  245px;
}

.outputPanel {
    display: flex;
    flex-direction: column;
    max-width: 95%;
    overflow: hidden;
}

p {
    display: flex;
    justify-content: flex-end;
    height: 60px;
    padding-right: 15px;
    color: beige;
    font-size: 250%;
}

.input {
    color: gray;
    font-size: 110%;
}

.buttonPanel {
    display: flex;
    flex-wrap: wrap;
    height: 300px;
}

button {
    background-color: #215b8e;
    transition: background-color 0.5s;
    color: beige;
    font-size: x-large;
    height: 60px;
    flex-basis: 60px;
    border-radius: 20%;
}

button:hover {
    background-color: #1b45a8;
  }

  #equals {
    background-color: #5f8ced;
  }

.numbers {
    background-color: #134269;
}

